--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.3",
     "@types/supertest": "^2.0.12",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
