--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple CRUD API server",
   "main": "index.ts",
   "scripts": {
-    "test": "test"
+    "run-server": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -25,13 +25,16 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.3",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "uuid": "^9.0.0",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0"
