feat: edit paths in config files

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --detectOpenHandles",
     "build": "tsc -p tsconfig.json && webpack --config ./webpack.config.js",
     "start:dev": "cross-env NODE_ENV=development nodemon --exec ts-node ./src/index.ts",
-    "start:prod": "cross-env NODE_ENV=production node ./bundle/src/index.js",
+    "start:prod": "cross-env NODE_ENV=production node ./bundle/index.js",
     "start:multi": "cross-env NODE_ENV=development nodemon --exec ts-node ./src/loadBalancer.ts"
   },
   "repository": {
